Improve location info for syntax errors.
JerryScript-DCO-1.0-Signed-off-by: Zoltan Herczeg zherczeg.u-szeged@partner.samsung.com

--- a/tests/unit-core/CMakeLists.txt
+++ b/tests/unit-core/CMakeLists.txt
@@ -88,6 +88,7 @@ set(SOURCE_UNIT_TEST_MAIN_MODULES
   test-stringbuilder.c
   test-strings.c
   test-symbol.c
+  test-syntax-error-location.c
   test-to-integer.c
   test-to-length.c
   test-to-property-descriptor.c
