--- a/targets/nuttx-stm32f4/Makefile.travis
+++ b/targets/nuttx-stm32f4/Makefile.travis
@@ -39,8 +39,8 @@ install-kconfig:
 
 # Fetch nuttx/{apps,nuttx} repositories.
 install-clone-nuttx:
-	git clone https://github.com/apache/incubator-nuttx-apps.git ../apps -b releases/9.0
-	git clone https://github.com/apache/incubator-nuttx.git ../nuttx -b releases/9.0
+	git clone https://github.com/apache/incubator-nuttx-apps.git ../apps -b releases/10.2
+	git clone https://github.com/apache/incubator-nuttx.git ../nuttx -b releases/10.2
 
 # Perform all the necessary (JerryScript-independent) installation steps.
 install-noapt: install-kconfig install-clone-nuttx
@@ -49,22 +49,17 @@ install: install-apt-get-deps install-noapt
 
 ## Targets for building NuttX with JerryScript.
 
-# Build JerryScript.
-script-build-jerryscript:
-	tools/build.py --clean --toolchain cmake/toolchain_mcu_stm32f4.cmake --profile=es.next --jerry-cmdline OFF --lto OFF --jerry-math ON --amalgam ON --jerry-port-default OFF --mem-heap 70 --compile-flag='--sysroot=../nuttx'
-
 # Link in the NuttX JerryScript target directory under the NuttX apps tree.
 script-add-jerryscript-app:
 	ln -s ../../jerryscript/targets/nuttx-stm32f4 ../apps/interpreters/jerryscript
 
 # Configure USB shell.
 script-configure-usbnsh:
-	cd ../nuttx/tools && PATH=$(LOCAL_INSTALL)/bin:$$PATH ./configure.sh stm32f4discovery/usbnsh
+	cd ../nuttx/tools && PATH=$(LOCAL_INSTALL)/bin:$$PATH ./configure.sh stm32f4discovery:usbnsh
 
 # Configure and build the firmware (NuttX with JerryScript).
-script: script-build-jerryscript script-add-jerryscript-app script-configure-usbnsh
-	echo 'CONFIG_HOST_LINUX=y' >> ../nuttx/.config
+script: script-add-jerryscript-app script-configure-usbnsh
 	echo 'CONFIG_ARCH_FPU=y' >> ../nuttx/.config
-	echo 'CONFIG_JERRYSCRIPT=y'>> ../nuttx/.config
+	echo 'CONFIG_INTERPRETERS_JERRYSCRIPT=y'>> ../nuttx/.config
 	PATH=$(LOCAL_INSTALL)/bin:$$PATH $(MAKE) -C ../nuttx olddefconfig
 	PATH=$(LOCAL_INSTALL)/bin:$$PATH $(MAKE) -C ../nuttx
