Outsource parser error messages
Modify tools/gen-magic-strings.py to generate error messages.

JerryScript-DCO-1.0-Signed-off-by: Csaba Repasi repasics@inf.u-szeged.hu

--- a/jerry-core/CMakeLists.txt
+++ b/jerry-core/CMakeLists.txt
@@ -317,6 +317,7 @@ set(SOURCE_CORE_FILES
   parser/js/js-scanner-ops.c
   parser/js/js-scanner-util.c
   parser/js/js-scanner.c
+  parser/js/parser-errors.c
   parser/regexp/re-bytecode.c
   parser/regexp/re-compiler.c
   parser/regexp/re-parser.c
