--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -146,6 +146,7 @@ LIT_MAGIC_STRING_VALUE = "value"
 LIT_MAGIC_STRING_SOURCE_NAME_EVAL = "<eval>"
 LIT_MAGIC_STRING_BIGINT_UL = "BigInt"
 LIT_MAGIC_STRING_ERRORS_UL = "errors"
+LIT_MAGIC_STRING_HAS_OWN_UL = "hasOwn"
 LIT_MAGIC_STRING_LOG10E_U = "LOG10E"
 LIT_MAGIC_STRING_MODULE_UL = "Module"
 LIT_MAGIC_STRING_NUMBER_UL = "Number"
