Minimize mbedos5 target
  * Removed hardware specific implementations
  * Added simple 'hello world' demo code to be aligned to other targets
  * Added ability to use external resources from outside JerryScript folder

JerryScript-DCO-1.0-Signed-off-by: Roland Takacs roland.takacs@h-lab.eu

--- a/targets/os/mbedos5/.mbedignore
+++ b/targets/os/mbedos5/.mbedignore
@@ -2,8 +2,7 @@ cmake/*
 docs/*
 jerry-main/*
 jerry-math/*
-jerry-port/default/default-date.c
-jerry-port/default/default-io.c
+jerry-port/*
 targets/*
 tests/*
 third-party/*
