--- a/.github/workflows/gh-actions.yml
+++ b/.github/workflows/gh-actions.yml
@@ -255,7 +255,7 @@ jobs:
           python-version: '3.8' # needed due to 'intelhex' module
       - run: sudo add-apt-repository ppa:team-gcc-arm-embedded/ppa
       - run: sudo apt update
-      - run: sudo apt install gcc-arm-embedded python3-setuptools
+      - run: sudo apt install gcc-arm-embedded python3-setuptools mercurial
       - run: make -f ./targets/os/mbedos5/Makefile.travis install
       - run: make -f ./targets/os/mbedos5/Makefile.travis script
 
