--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -35,6 +35,8 @@ LIT_MAGIC_STRING_IS = "is"
 LIT_MAGIC_STRING_OF = "of"
 LIT_MAGIC_STRING_ATOMICS_OR = "or"
 LIT_MAGIC_STRING_LN2_U = "LN2"
+LIT_MAGIC_STRING_NFC_U = "NFC"
+LIT_MAGIC_STRING_NFD_U = "NFD"
 LIT_MAGIC_STRING_MAP_UL = "Map"
 LIT_MAGIC_STRING_NAN = "NaN"
 LIT_MAGIC_STRING_SET_UL = "Set"
@@ -66,6 +68,8 @@ LIT_MAGIC_STRING_EMPTY_NON_CAPTURE_GROUP = "(?:)"
 LIT_MAGIC_STRING_DATE_UL = "Date"
 LIT_MAGIC_STRING_JSON_U = "JSON"
 LIT_MAGIC_STRING_LN10_U = "LN10"
+LIT_MAGIC_STRING_NFKC_U = "NFKC"
+LIT_MAGIC_STRING_NFKD_U = "NFKD"
 LIT_MAGIC_STRING_ATOMICS_LOAD = "load"
 LIT_MAGIC_STRING_MATH_UL = "Math"
 LIT_MAGIC_STRING_NULL_UL = "Null"
@@ -288,6 +292,7 @@ LIT_MAGIC_STRING_GET_UINT16_UL = "getUint16"
 LIT_MAGIC_STRING_GET_UINT32_UL = "getUint32"
 LIT_MAGIC_STRING_ATOMICS_ISLOCKFREE = "isLockFree"
 LIT_MAGIC_STRING_LASTINDEX_UL = "lastIndex"
+LIT_MAGIC_STRING_NORMALIZE = "normalize"
 LIT_MAGIC_STRING_MULTILINE = "multiline"
 LIT_MAGIC_STRING_PROTOTYPE = "prototype"
 LIT_MAGIC_STRING_REVOCABLE = "revocable"
