Add support for Mbed-OS 6.15.0
The default Mbed OS device (STM32F4) had been changed to FRDM-K64F that is
supported by both Mbed OS 5 and Mbed OS 6 versions. Makefile had also been
modified to have a flash recipe.

JerryScript-DCO-1.0-Signed-off-by: Roland Takacs roland.takacs@h-lab.eu

--- a/targets/os/mbedos/Makefile
+++ b/targets/os/mbedos/Makefile
@@ -12,8 +12,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# default board: STM32F4-Discovery
-BOARD ?= DISCO_F407VG
+# default board: FRDM-K64F
+BOARD ?= K64F
 
 # defult toolchain
 TOOLCHAIN ?= GCC_ARM
@@ -30,28 +30,44 @@ BUILD_DIR ?= $(JERRY_ROOT_DIR)/build/mbed-os
 # default jerry heap size (in KB)
 JERRY_HEAP_SIZE ?= 70
 
+define MBED_CLI_FLAGS
+	--clean
+	--build $(BUILD_DIR)
+	--source $(MBED_OS_DIR)
+	--source $(JERRY_ROOT_DIR)
+	--source $(JERRY_TARGET_DIR)
+	--toolchain $(TOOLCHAIN)
+	--target $(BOARD)
+	--artifact-name mbedos
+	--macro JERRY_GLOBAL_HEAP_SIZE=$(JERRY_HEAP_SIZE)
+endef
+
 .PHONY: all
-all: .mbedignore-copy .mbed-build .mbedignore-remove
+all: .build
 
 .PHONY: clean
-clean:
+clean: .mbedignore-remove
 	rm -rf $(JERRY_ROOT_DIR)/build/mbed-os
+
+.PHONY: flash
+flash: .mbed-set-flash-flag .build
+
+.PHONY: .mbed-set-flash-flag
+.mbed-set-flash-flag:
+	$(eval MBED_CLI_FLAGS += --flash)
+
+.PHONY: .build
+.build: .mbedignore-copy .mbed-build .mbedignore-remove
 
 .PHONY: .mbed-build
 .mbed-build:
 	mbed config -G MBED_OS_DIR $(MBED_OS_DIR)
-	mbed compile \
-		--clean \
-		--build $(BUILD_DIR) \
-		--source $(MBED_OS_DIR) \
-		--source $(JERRY_ROOT_DIR) \
-		--source $(JERRY_TARGET_DIR) \
-		--toolchain $(TOOLCHAIN) \
-		--target $(BOARD) \
-		--macro JERRY_GLOBAL_HEAP_SIZE=$(JERRY_HEAP_SIZE)
+	mbed compile $(strip $(MBED_CLI_FLAGS))
 
+.PHONY: .mbedignore-copy
 .mbedignore-copy:
-	cp .mbedignore $(JERRY_ROOT_DIR)
+	cp mbedignore.txt $(JERRY_ROOT_DIR)/.mbedignore
 
+.PHONY: .mbedignore-remove
 .mbedignore-remove:
-	rm $(JERRY_ROOT_DIR)/.mbedignore
+	rm -f $(JERRY_ROOT_DIR)/.mbedignore
