--- a/.github/workflows/gh-actions.yml
+++ b/.github/workflows/gh-actions.yml
@@ -225,7 +225,7 @@ jobs:
           $RUNNER -q --jerry-tests --build-debug
           --buildoptions=--toolchain=cmake/toolchain_linux_aarch64.cmake,--linker-flag=-static
 
-  MbedOS5_K64F_Build_Test:
+  MbedOS_K64F_Build_Test:
     runs-on: ubuntu-18.04 # needed due to ppa:team-gcc-arm-embedded/ppa
     steps:
       - uses: actions/checkout@v2
@@ -235,8 +235,8 @@ jobs:
       - run: sudo add-apt-repository ppa:team-gcc-arm-embedded/ppa
       - run: sudo apt update
       - run: sudo apt install gcc-arm-embedded python3-setuptools mercurial
-      - run: make -f ./targets/os/mbedos5/Makefile.travis install
-      - run: make -f ./targets/os/mbedos5/Makefile.travis script
+      - run: make -f ./targets/os/mbedos/Makefile.travis install
+      - run: make -f ./targets/os/mbedos/Makefile.travis script
 
   Zephyr_STM32F4_Build_Test:
     runs-on: ubuntu-latest
