Update build profile to es.next on esp8266   - fix amalgam build issue with es.next profile   - update esp linker script according to: Table 4-1. in     https://www.espressif.com/sites/default/files/documentation/2a-esp8266-sdk_getting_started_guide_en.pdf
JerryScript-DCO-1.0-Signed-off-by: Martin Negyokru negyokru@inf.u-szeged.hu

--- a/targets/baremetal-sdk/esp8266-rtos-sdk/Makefile.esp8266
+++ b/targets/baremetal-sdk/esp8266-rtos-sdk/Makefile.esp8266
@@ -52,7 +52,7 @@ jerry:
 	 -DENABLE_AMALGAM=ON \
 	 -DJERRY_MATH=ON \
 	 -DJERRY_CMDLINE=OFF \
-	 -DJERRY_PROFILE="es5.1" \
+	 -DJERRY_PROFILE="es.next" \
 	 -DEXTERNAL_COMPILE_FLAGS="$(ESP_CFLAGS)" \
 	 -DJERRY_GLOBAL_HEAP_SIZE=$(JERRYHEAP)
 
