Fix logging related issues
PR #4907 moved the log level into the engine context, however this caused
issues with logging without the engine being initialized. This commit
reverts the log level to be a static variable.

This commit also implements missing format specifiers for jerry_log.

JerryScript-DCO-1.0-Signed-off-by: Dániel Bátyai dbatyai@inf.u-szeged.hu

--- a/jerry-core/CMakeLists.txt
+++ b/jerry-core/CMakeLists.txt
@@ -300,6 +300,7 @@ set(SOURCE_CORE_FILES
   jmem/jmem-heap.c
   jmem/jmem-poolman.c
   jrt/jrt-fatals.c
+  jrt/jrt-logging.c
   lit/lit-char-helpers.c
   lit/lit-magic-strings.c
   lit/lit-strings.c
