Update doxygen and fix documentation
Update Doxyfile to version 1.9.1

Re-enable doxygen CI checker

Fix some regular comments that should have been doc comments

Document void return types for some inline functions explicitly

Move start of some doxygen groups so they are included always, and not left
out of certain ifdefs

Ignore some doxygen warnings:
    Member (function) is not documented in headers
    Documented empty return type in headers
    Argument has multiple @param documentation sections

JerryScript-DCO-1.0-Signed-off-by: Máté Tokodi mate.tokodi@szteszoftver.hu

--- a/.github/workflows/gh-actions.yml
+++ b/.github/workflows/gh-actions.yml
@@ -17,12 +17,12 @@ jobs:
           python-version: '3.10'
       - run: sudo apt update
 # TODO: update checkers to current versions available in ubuntu 22.04
-#      - run: sudo apt install doxygen clang-format-10 cppcheck python-serial
-      - run: sudo apt install pylint
+#      - run: sudo apt install clang-format-10 cppcheck python-serial
+      - run: sudo apt install pylint doxygen
       - run: $RUNNER --check-signed-off=gh-actions
         if: ${{ always() }}
-#      - run: $RUNNER --check-doxygen
-#        if: ${{ always() }}
+      - run: $RUNNER --check-doxygen
+        if: ${{ always() }}
 #      - run: $RUNNER --check-format
 #        if: ${{ always() }}
       - run: $RUNNER --check-license
