--- a/.github/workflows/gh-actions.yml
+++ b/.github/workflows/gh-actions.yml
@@ -17,7 +17,8 @@ jobs:
           python-version: '3.10'
       - run: sudo apt update
 # TODO: update checkers to current versions available in ubuntu 22.04
-#      - run: sudo apt install doxygen clang-format-10 cppcheck pylint python-serial
+#      - run: sudo apt install doxygen clang-format-10 cppcheck python-serial
+      - run: sudo apt install pylint
       - run: $RUNNER --check-signed-off=gh-actions
         if: ${{ always() }}
 #      - run: $RUNNER --check-doxygen
@@ -28,8 +29,8 @@ jobs:
         if: ${{ always() }}
 #      - run: $RUNNER --check-strings
 #        if: ${{ always() }}
-#      - run: $RUNNER --check-pylint
-#        if: ${{ always() }}
+      - run: $RUNNER --check-pylint
+        if: ${{ always() }}
 #      - run: $RUNNER --check-cppcheck
 #        if: ${{ always() }}
 
@@ -37,7 +38,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '>=3.6'
       - run: $RUNNER -q --jerry-tests
       - run: $RUNNER -q --jerry-tests --build-debug
       - run: $RUNNER -q --jerry-debugger
@@ -47,6 +50,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '>=3.6'
       - run: sudo apt update
       - run: sudo apt install gcc-multilib
       - run: $RUNNER -q --jerry-tests --buildoptions=--compile-flag=-m32,--cpointer-32bit=on
@@ -56,6 +62,9 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '>=3.6'
       - run: $RUNNER -q --jerry-tests
       - run: $RUNNER -q --unittests
 
@@ -63,6 +72,9 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '>=3.6'
       - run: $RUNNER -q --jerry-tests --build-debug
       - run: $RUNNER -q --unittests --build-debug
 
@@ -70,6 +82,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '>=3.6'
       - run: sudo apt update
       - run: sudo apt install gcc-multilib
       - run: $RUNNER --buildoption-test
@@ -78,6 +93,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '>=3.6'
       - run: $RUNNER --test262 update
       - uses: actions/upload-artifact@v2
         if: success() || failure()
@@ -90,6 +108,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '>=3.6'
       - run: $RUNNER --test262 update --build-debug --test262-test-list=built-ins,annexB,harness,intl402
       - uses: actions/upload-artifact@v2
         if: success() || failure()
@@ -102,6 +123,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '>=3.6'
       - run: $RUNNER --test262 update --build-debug --test262-test-list=language
       - uses: actions/upload-artifact@v2
         if: success() || failure()
@@ -114,6 +138,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '>=3.6'
       - run: $RUNNER -q --unittests
       - run: $RUNNER -q --unittests --build-debug
 
@@ -123,6 +150,9 @@ jobs:
       CC: clang
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '>=3.6'
       - run: sudo apt update
       - run: sudo apt install gcc-multilib
       - run: $RUNNER -q --unittests
@@ -135,6 +165,9 @@ jobs:
       ASAN_OPTIONS: detect_stack_use_after_return=1:check_initialization_order=true:strict_init_order=true
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '>=3.6'
       - run: sudo apt update
       - run: sudo apt install gcc-multilib
       - run: >-
@@ -148,6 +181,9 @@ jobs:
       ASAN_OPTIONS: detect_stack_use_after_return=1:check_initialization_order=true:strict_init_order=true
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '>=3.6'
       - run: sudo apt update
       - run: sudo apt install gcc-multilib
       - run: >-
@@ -161,6 +197,9 @@ jobs:
       UBSAN_OPTIONS: print_stacktrace=1
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '>=3.6'
       - run: sudo apt update
       - run: sudo apt install gcc-multilib
       - run: >-
@@ -179,6 +218,9 @@ jobs:
       TIMEOUT: 300
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '>=3.6'
       - run: sudo apt update
       - run: sudo apt install gcc-arm-linux-gnueabihf libc6-dev-armhf-cross qemu-user-static
       - run: >-
@@ -192,6 +234,9 @@ jobs:
       TIMEOUT: 300
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '>=3.6'
       - run: sudo apt update
       - run: sudo apt install gcc-arm-linux-gnueabihf libc6-dev-armhf-cross qemu-user-static
       - run: >-
@@ -205,6 +250,9 @@ jobs:
       TIMEOUT: 300
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '>=3.6'
       - run: sudo apt update
       - run: sudo apt install gcc-aarch64-linux-gnu libc6-dev-armhf-cross qemu-user-static
       - run: >-
@@ -218,6 +266,9 @@ jobs:
       TIMEOUT: 300
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '>=3.6'
       - run: sudo apt update
       - run: sudo apt install gcc-aarch64-linux-gnu libc6-dev-armhf-cross qemu-user-static
       - run: >-
@@ -242,9 +293,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: '>=3.6'
       - run: sudo apt update
       - run: sudo apt install gperf dfu-util device-tree-compiler
       - run: make -f ./targets/os/zephyr/Makefile.travis install
@@ -254,6 +305,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '>=3.6'
       - run: sudo apt update
       - run: sudo apt install gcc-arm-none-eabi libnewlib-arm-none-eabi gperf
       - run: make -f ./targets/os/nuttx/Makefile.travis install-noapt
@@ -276,9 +330,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/setup-python@v4
         with:
-          python-version: '3.8'
+          python-version: '>=3.8'
       - run: make -f ./targets/baremetal-sdk/espressif/esp8266-rtos-sdk/Makefile.travis install-noapt
       - run: make -f ./targets/baremetal-sdk/espressif/esp8266-rtos-sdk/Makefile.travis script
 
