--- a/.github/workflows/gh-actions.yml
+++ b/.github/workflows/gh-actions.yml
@@ -16,19 +16,17 @@ jobs:
         with:
           python-version: '3.10'
       - run: sudo apt update
-# TODO: update checkers to current versions available in ubuntu 22.04
-#      - run: sudo apt install clang-format-10 python-serial
-      - run: sudo apt install pylint doxygen cppcheck
+      - run: sudo apt install pylint doxygen cppcheck clang-format-15
       - run: $RUNNER --check-signed-off=gh-actions
         if: ${{ always() }}
       - run: $RUNNER --check-doxygen
         if: ${{ always() }}
-#      - run: $RUNNER --check-format
-#        if: ${{ always() }}
+      - run: $RUNNER --check-format
+        if: ${{ always() }}
       - run: $RUNNER --check-license
         if: ${{ always() }}
-#      - run: $RUNNER --check-strings
-#        if: ${{ always() }}
+      - run: $RUNNER --check-strings
+        if: ${{ always() }}
       - run: $RUNNER --check-pylint
         if: ${{ always() }}
       - run: $RUNNER --check-cppcheck
